/*
 * This file is part of trust|me
 * Copyright(c) 2013 - 2017 Fraunhofer AISEC
 * Fraunhofer-Gesellschaft zur FÃ¶rderung der angewandten Forschung e.V.
 *
 * This program is free software; you can redistribute it and/or modify it
 * under the terms and conditions of the GNU General Public License,
 * version 2 (GPL 2), as published by the Free Software Foundation.
 *
 * This program is distributed in the hope it will be useful, but WITHOUT
 * ANY WARRANTY; without even the implied warranty of MERCHANTABILITY or
 * FITNESS FOR A PARTICULAR PURPOSE. See the GPL 2 license for more details.
 *
 * You should have received a copy of the GNU General Public License along with
 * this program; if not, see <http://www.gnu.org/licenses/>
 *
 * The full GNU General Public License is included in this distribution in
 * the file called "COPYING".
 *
 * Contact Information:
 * Fraunhofer AISEC <trustme@aisec.fraunhofer.de>
 */

syntax = "proto2";

option java_package = "de.fraunhofer.aisec.trustme";

message DeviceConfig {
	// unique uuid. may change due to user change.
	// may be generated if no uuid is available.
	required string uuid = 1;

	// IP and port of backend (MDM)
	optional string mdm_node = 2;
	optional string mdm_service = 3;

	// UUID of the container receiving phone calls (TODO currently unused)
	optional string telephony_uuid = 4;

	// base url for fetching updates (image files, etc.)
	optional string update_base_url = 5;
	// e.g. http://server:port/trustme/operatingsystems/<device>/<name>-<version>/<filename.img>

	// flag which decides led blinking
	optional bool should_led_blink = 6 [default = false];

	// configure os of the management container
	optional string c0os = 7 [default = "trustx-coreos"];

	// configure network
	optional string host_addr = 8 [default = ""];
	optional uint32 host_subnet = 9 [default = 0];
	optional string host_if = 10 [default = "wlan0"];
	optional string host_gateway = 11 [default = ""];
	optional string host_dns = 12 [default = ""];

	// enable locally signed images
	optional bool locally_signed_images = 13 [default = false];
}
